# eilmeldung

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  flake.nix  release.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-deploy.yml  build-and-release.yml  build-main.yml  lint.yml  release.yml
HomebrewFormula/: eilmeldung.rb  update-sha.sh
ScoopBucket/: eilmeldung.json
assets/: no-thumb.xcf
demos/: filer-demo.webm  filter-demo.mkv
docs/: cli_args.md  commands.md  configuration.md  faq.md  getting-started.md  installation.md  keybindings.md  llm-development.md  llms.txt  pipe.md  queries.md
docs/examples/: freshrss_secrets_linux_macos.md  freshrss_secrets_windows.md
examples/: default-config.toml  light-ansi-pallette.toml
nix/: README.md  home-manager-example.nix  home-manager-module.nix  package.nix  shell.nix
scripts/: build-windows.ps1
src/: app.rs  cli.rs  commands.rs  connectivity.rs  input.rs  logging.rs  login.rs  main.rs  newsflash_utils.rs  prelude.rs  query.rs  undo.rs
src/config/: border_theme.rs  cli_config.rs  dimension.rs  feed_list_content_identfier.rs  icon_set.rs  input_config.rs  login_configuration.rs  mod.rs  paths.rs  share_target.rs  sync_stats.rs  theme.rs
src/input/: key.rs  mod.rs
src/messages/: command.rs  event.rs  mod.rs
src/messages/command/: mod.rs  parse.rs
src/query/: mod.rs  parse.rs  search_term.rs  sort_order.rs
src/ui/: article_content.rs  articles_list.rs  batch.rs  command_confirm.rs  command_input.rs  feeds_list.rs  help_popup.rs  mod.rs  tooltip.rs  view.rs
src/ui/article_content/: mod.rs  model.rs  view.rs
src/ui/articles_list/: message_recv.rs  mod.rs  model.rs  view.rs
src/ui/command_confirm/: mod.rs
src/ui/command_input/: mod.rs
src/ui/feeds_list/: feed_list_item.rs  message_recv.rs  mod.rs  model.rs  view.rs
src/ui/help_popup/: mod.rs
src/ui/tooltip/: mod.rs
src/utils/: mod.rs
test/: outputpass.sh
