[package]
name = "eilmeldung"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
config = "0.15.17"
# crossterm = "0.29.0"
derive = "1.0.0"
directories = "6.0.0"
env_logger = "0.11.8"
getset = "0.1.6"
htmd = "0.3.0"
image = "0.25.8"
inquire = "0.9.1"
log = "0.4.28"
logos = "0.15.1"
network_connectivity = "1.0.0"
news-flash = { git = "https://gitlab.com/news_flash/news_flash.git", version = "2.3.0-alpha.0" }
once_cell = "1.21.3"
parse_datetime = "0.13.1"
ratatui = { version = "0.29.0", features = ["serde", "crossterm"]}
ratatui-image = "8.0.2"
regex = "1.12.2"
reqwest = "0.12.23"
rig-core = { version = "0.20.0", features = ["derive", "rmcp"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
strfmt = "0.2.5"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
termimad = "0.34.0"
text-splitter = { version = "0.28.0", features = ["markdown"] }
thiserror = "2.0.17"
throbber-widgets-tui = "0.9.0"
tokio = { version = "1.47.1", features = ["full"] }
tui-logger = { version = "0.17.3", features = ["crossterm"] }
tui-markdown = "0.3.5"
tui-prompts = "0.5.2"
tui-textarea = "0.7.0"
tui-tree-widget = "0.23.1"
url = "2.5.7"
webbrowser = "1.0.5"
