[package]
name = "eilmeldung"
version = "0.8.0"
edition = "2024"
description = "a feature-rich TUI RSS Reader based on the news-flash library"
homepage = "https://gitlab.com/christo-auer/eilmeldung"
repository = "https://gitlab.com/christo-auer/eilmeldung"
license = "GPL-3.0-or-later"
keywords = [ "rss", "tui", "news", "newsflash" ]
categories = [ "command-line-utilities" ]
publish = false

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control" ] }
chrono = "0.4.42"
claims = "0.8.0"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.17"
derive = "1.0.0"
directories = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
getset = "0.1.6"
htmd = "0.3.0"
htmlescape = "0.3.1"
if-watch = { version = "3.2.1", features = ["tokio"] }
image = "0.25.8"
indexmap = { version = "2.12.1", features = ["serde"] }
inquire = "0.9.1"
itertools = "0.14.0"
log = "0.4.28"
logos = "0.15.1"

news-flash = { git = "https://gitlab.com/news_flash/news_flash.git", version = "2.3.0-alpha.0", rev = "50b5e39e" }
once_cell = "1.21.3"
openssl = { version = "0.10.75", features = ["vendored"] }
parse_datetime = "0.13.1"
percent-encoding = "2.3.2"
ratatui = { version = "0.29.0", features = ["serde", "crossterm"]}
ratatui-image = "8.0.2"
regex = "1.12.2"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "charset", "brotli"] }
rstest = "0.26.1"
# rig-core = { version = "0.20.0", features = ["derive", "rmcp"] } // for later
serde = { version = "1.0.226", features = ["derive"] }
serde_assert = "0.8.0"
serde_json = "1.0.145"
serde_toml = "0.0.1"
shell-words = "1.1.1"
strfmt = "0.2.5"
string_manipulation_utf8 = "0.3.0"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
termimad = "0.34.0"
text-splitter = { version = "0.28.0", features = ["markdown"] }
thiserror = "2.0.17"
throbber-widgets-tui = "0.9.0"
tokio = { version = "1.47.1", features = ["macros", "tokio-macros", "time" ] }
toml = "0.9.10"
tui-logger = { version = "0.17.3", features = ["crossterm"] }
tui-markdown = "0.3.5"
tui-prompts = "0.5.2"
tui-textarea = "0.7.0"
tui-tree-widget = "0.23.1"
url = "2.5.7"
webbrowser = "1.0.5"
