[package]
name = "eilmeldung"
version = "1.6.0"
edition = "2024"
description = "a feature-rich TUI RSS Reader based on the news-flash library"
homepage = "https://github.com/christo-auer/eilmeldung"
repository = "https://github.com/christo-auer/eilmeldung"
license = "GPL-3.0-or-later"
keywords = [ "rss", "tui", "news", "newsflash" ]
categories = [ "command-line-utilities" ]
publish = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true


[dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control" ] }
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.25"
derive = "1.0.0"
directories = "6.0.0"
env_logger = "0.11.11"
futures = "0.3.32"
fuzzy-matcher = "0.3.7"
getset = "0.1.7"
htmd = "0.5.4"
htmlescape = "0.3.1"
if-watch = { version = "3.2.2", features = ["tokio"] }
image = "0.25.10"
indexmap = { version = "2.14.0", features = ["serde"] }
inquire = "0.9.4"
itertools = "0.14.0"
libc = "0.2"
libsqlite3-sys = { version = "0.37.0", features = ["bundled", "bundled-windows"] }
log = "0.4.33"
logos = "0.16.1"
news-flash = { version = "3.1.0", features = ["image-downloader"] }
notify-rust = "4.18.0"
once_cell = "1.21.4"
paste = "1.0.15"
openssl = { version = "0.10.81", features = ["vendored"] }
parse_datetime = "0.14.0"
percent-encoding = "2.3.2"
ratatui = { version = "0.30.2", features = ["all-widgets", "palette", "serde"] }
ratatui-image = { version = "11.0.6", default-features = false, features = ["serde", "tokio"] }
ratatui-textarea = "0.9.2"
regex = "1.13.0"
reqwest = { version = "0.13", default-features = false, features = ["http2", "charset", "brotli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_toml = "0.0.1"
shell-words = "1.1.1"
strfmt = "0.2.5"
string_manipulation_utf8 = "0.3.0"
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
termimad = "0.34.1"
text-splitter = { version = "0.30.1", features = ["markdown"] }
the-other-tui-markdown = "0.1.0"
thiserror = "2.0.18"
throbber-widgets-tui = "0.11.1"
tokio = { version = "1.52.3", features = ["macros", "tokio-macros", "time", "process", "io-util" ] }
toml = "1.1.2"
tui-logger = { version = "0.18.3", features = ["crossterm"] }
tui-markdown = "0.3.8"
tui-prompts = "0.6.7"
tui-tree-widget = "0.24.0"
url = "2.5.8"
webbrowser = "1.2.1"
shellexpand = "3.1.2"

[dev-dependencies]
claims = "0.8.0"
rstest = "0.26.1"
serde_assert = "0.8.0"
